--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   
   
   
-  <div class="row col-4 position-absolute top-50 start-50 translate-middle mt-1 rounded-4"  style="width: 20rem" id="card">
+  <div class="row col-4 container-fluid position-fixed top-50 start-50 translate-middle mt-1 rounded-4"  style="width: 20rem" id="card">
     <div class="col">
       <div class="card h-100">
         <img src="./images/image-qr-code.png" class="img-fluid rounded-3">
